--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-target/
-boot/
-lib_managed/
-src_managed/
-project/plugins/project/
+logs
+target
+.idea
+.idea_modules
+/.classpath
+/.project
+/.settings
+/RUNNING_PID
+node_modules
+data/
